Atcoder/ABC過去問/A/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/A/ABC157A.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/A/ABC157A.cpp:304:9: error: 'ceiling' was not declared in this scope
  304 |     out(ceiling(n/2));
      |         ^~~~~~~
